--- a/.github/pipeline-descriptor.yml
+++ b/.github/pipeline-descriptor.yml
@@ -21,7 +21,7 @@ dependencies:
   id:              thc
   uses:            docker://ghcr.io/paketo-buildpacks/actions/github-release-dependency:main
   with:
-    glob:       thc-.+-amd64_linux.tar.xz
-    owner:      thc
-    repository: thc
+    glob:       thc-x86_64-unknown-linux-musl
+    owner:      dmikusa
+    repository: tiny-health-checker
     token:      ${{ secrets.JAVA_GITHUB_TOKEN }}
