Add arch to the dependency update
Signed-off-by: Daniel Mikusa <dan@mikusa.com>

--- a/.github/pipeline-descriptor.yml
+++ b/.github/pipeline-descriptor.yml
@@ -38,3 +38,4 @@ dependencies:
     owner:      dmikusa
     repository: tiny-health-checker
     token:      ${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}
+    arch:       arm64
