--- a/.github/workflows/pb-update-tiny-health-checker-arm-64.yml
+++ b/.github/workflows/pb-update-tiny-health-checker-arm-64.yml
@@ -27,6 +27,7 @@ jobs:
             - id: dependency
               uses: docker://ghcr.io/paketo-buildpacks/actions/github-release-dependency:main
               with:
+                arch: arm64
                 glob: thc-aarch64-unknown-linux-musl
                 owner: dmikusa
                 repository: tiny-health-checker
@@ -77,7 +78,7 @@ jobs:
                 echo "new-version=${VERSION}" >> "$GITHUB_OUTPUT"
                 echo "version-label=${LABEL}" >> "$GITHUB_OUTPUT"
               env:
-                ARCH: ""
+                ARCH: arm64
                 CPE: ${{ steps.dependency.outputs.cpe }}
                 CPE_PATTERN: ""
                 ID: thc
