--- a/.github/pipeline-descriptor.yml
+++ b/.github/pipeline-descriptor.yml
@@ -21,7 +21,7 @@ dependencies:
   id:              thc
   uses:            docker://ghcr.io/paketo-buildpacks/actions/github-release-dependency:main
   with:
-    glob:       thc-x86_64-unknown-linux-musl
+    glob:       ^tiny-health-checker-x86_64-unknown-linux-musl\.tar\.xz$
     owner:      dmikusa
     repository: tiny-health-checker
     token:      ${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}
@@ -31,7 +31,7 @@ dependencies:
   id:              thc
   uses:            docker://ghcr.io/paketo-buildpacks/actions/github-release-dependency:main
   with:
-    glob:       thc-aarch64-unknown-linux-musl
+    glob:       ^tiny-health-checker-aarch64-unknown-linux-musl\.tar\.xz$
     owner:      dmikusa
     repository: tiny-health-checker
     token:      ${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}
